gcl (2.6.1-3) unstable; urgency=low

  * Fix static detection fr ia64; contblock size detection on arm
  * Fix gcc verion checking in gmp3 subconfigure, esp. for arm

 -- Camm Maguire <camm@enhanced.com>  Fri,  5 Sep 2003 21:30:13 +0000

gcl (2.6.1-2) unstable; urgency=low

  * Add windows/install.lsp to clean target
  * Add in macosx files to stable and cvs head
  * Fix bad debelper postinst, Closes: #208765

 -- Camm Maguire <camm@enhanced.com>  Fri,  5 Sep 2003 13:15:11 +0000

gcl (2.6.1-1) unstable; urgency=low

  * New upstream release
  * Type-punning warning fixes
  * small_fixnum overflow fixes
  * off by one fix in cerror
  * Fix compiler error which had not recognized defpackage as a package
    operation
  * Fix tkl.lisp call to open-named-socket
  * Make values-list and nreconc signal errors when they should on
    dotted lists.
  * Avoid use of windows.h types as macros.
  * New config.{sub,guess}
  * Windows installer updates from CVS HEAD
  * fix potential longjmp clobber in read.d;add some windows files to
    main makefile clean target;
  * Darwin revealed fixes to usig.c and unixtime.c
  * Fix gbc time calculation in case of recursive gbc calls
  * Run patch_sharp in LSharp_exclamation_reader to handle new case of
    defpackage ops at head of fasl vector, required for maxima build
  * Special symbol Dotnil has ordinary list Cnil for plist and hpack
  * Small fixes for profiling support
  * Restore pp() function for debugging; print out undefined symbol
    names
  * Small patch for fix xgcl demo (thanks  Michael Koehne)
  * Better bfd symbol table strategy
  * Fix bfd table symbol counting for combined_table profiling
  * amd64 linux support
  * O6 -> O3
  * static linking on ia64 to work around current mechanism for runtime
    generated function descriptors
  * enable-static configure option
  * Fix debian/gcl-doc.docs for latest texinfo file splitting policy,
    Closes: #206017
  * Fix typo in o/sfasli.c