@@ -16,7 +16,12 @@ static void *gcl_gmp_realloc(void *oldmem, size_t oldsize, size_t newsize)
   bcopy(MP_SELF(big_gcprotect),new,oldsize);
   MP_SELF(big_gcprotect)=0;
 /* SGC contblock pages: Its possible this is on an old page CM 20030827 */
-  if (inheap(oldmem)) insert_maybe_sgc_contblock(oldmem,oldsize);
+  if (inheap(oldmem)) 
+#ifdef SGC
+    insert_maybe_sgc_contblock(oldmem,oldsize);
+#else
+    insert_contblock(oldmem,oldsize);
+#endif
 
   return new;
 }
