@@ -2,8 +2,9 @@ gcl (2.6.1-3) unstable; urgency=low
 
   * Fix static detection fr ia64; contblock size detection on arm
   * Fix gcc verion checking in gmp3 subconfigure, esp. for arm
+  * Escape all sgc code with #ifdef SGC
 
- -- Camm Maguire <camm@enhanced.com>  Fri,  5 Sep 2003 21:30:13 +0000
+ -- Camm Maguire <camm@enhanced.com>  Fri,  5 Sep 2003 21:32:47 +0000
 
 gcl (2.6.1-2) unstable; urgency=low
 
